vpc/module/aws/networking/standard_vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_support

  tags = merge(
    {
      "Name"    = var.vpc_name
    },
    var.vpc_tags,
  )
}
